# social-network-fastapi

./: .env.dist  README.md  pyproject.toml
app/: main.py
app/alembic/versions/: 2024_07_14_1120-1dbece15492e_create_users_table.py  2024_07_14_1123-cfec77e3335e_create_posts_table.py  2024_07_14_1127-791fe4c5faa7_create_profiles_table.py  2024_07_18_2013-1e8f7488df0b_add_created_at_and_updated_at_columns.py
app/api/: __init__.py  posts.py  users.py
app/core/: config.py
app/core/models/: __init__.py  base.py  post.py  profile.py  user.py
app/core/models/mixins/: __init__.py  user_relation.py
app/core/schemas/: post.py  user.py
app/crud/: posts.py  users.py
